[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://gui/LevelButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/DefaultFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/SmallFont.tres" type="DynamicFont" id=5]

[node name="LevelSelect" type="Node"]
script = ExtResource( 1 )
LevelButton = ExtResource( 2 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 400.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 640.0
custom_constants/separation = 10
alignment = 1

[node name="Level1" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 19.0
margin_right = 320.0
margin_bottom = 117.0

[node name="Level2" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 127.0
margin_right = 320.0
margin_bottom = 225.0

[node name="Level3" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 235.0
margin_right = 320.0
margin_bottom = 333.0

[node name="Level4" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 343.0
margin_right = 320.0
margin_bottom = 441.0

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 451.0
margin_right = 320.0
margin_bottom = 531.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = ExtResource( 4 )
text = "More Levels"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 541.0
margin_right = 320.0
margin_bottom = 621.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="Credits" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Credits: 0"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_Back_pressed"]
